Added custom font.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -56,6 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="-20dp"
         android:text="@string/split_tip_between_label" />
 
     <TableLayout
